[gd_scene load_steps=18 format=2]

[ext_resource path="res://Components/MissionControl/MissionControl.tscn" type="PackedScene" id=1]
[ext_resource path="res://Components/PongGame/PongGame.tscn" type="PackedScene" id=2]
[ext_resource path="res://Entities/Player/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Media/Visual/Room/Monitor.png" type="Texture" id=4]
[ext_resource path="res://Game/Game.gd" type="Script" id=5]
[ext_resource path="res://Components/LifeScreen/LifeScreen.tscn" type="PackedScene" id=6]
[ext_resource path="res://Components/Lever/Lever.tscn" type="PackedScene" id=7]
[ext_resource path="res://Components/Trainer/Trainer.tscn" type="PackedScene" id=8]
[ext_resource path="res://Media/Audio/game.wav" type="AudioStream" id=9]
[ext_resource path="res://Media/Audio/default1.wav" type="AudioStream" id=10]
[ext_resource path="res://Game/default.gd" type="Script" id=11]
[ext_resource path="res://Components/EnergyScreen/EnergyScreen.tscn" type="PackedScene" id=12]
[ext_resource path="res://Media/Visual/Light/light.png" type="Texture" id=13]
[ext_resource path="res://Components/Lighting/Lighting.tscn" type="PackedScene" id=14]
[ext_resource path="res://Components/Light/Light.tscn" type="PackedScene" id=15]

[sub_resource type="OccluderPolygon2D" id=1]
polygon = PoolVector2Array( -16.0069, 7.98399, -15.9627, -7.9922, 15.9013, -7.9701, 16.0118, 7.9398, 14.9953, 7.05592, 14.9953, -7.04203, -14.9904, -7.01993, -15.0125, 7.03382 )

[sub_resource type="RectangleShape2D" id=2]

[node name="Game" type="Node2D"]
script = ExtResource( 5 )

[node name="PongGame" parent="." instance=ExtResource( 2 )]
position = Vector2( -26.5051, 8.39034 )
rotation = -1.5708
player_speed = 1100.0
ball_speed = 100.0

[node name="MissionControl" parent="." instance=ExtResource( 1 )]

[node name="LeftLever" parent="." instance=ExtResource( 7 )]
position = Vector2( 33.0052, 28.0734 )
scale = Vector2( -1, 1 )
flip_instruction_key = true

[node name="RightLever" parent="." instance=ExtResource( 7 )]
position = Vector2( 289.861, 29.162 )

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 107.268, 43.7082 )

[node name="Monitor" type="Sprite" parent="."]
position = Vector2( 154.195, 5.02345 )
texture = ExtResource( 4 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="Monitor"]
occluder = SubResource( 1 )

[node name="Position2D" type="Position2D" parent="Monitor"]
position = Vector2( -14.0148, -6.00744 )

[node name="Light2D" type="Light2D" parent="Monitor"]
texture = ExtResource( 13 )
texture_scale = 0.6
shadow_enabled = true

[node name="LifeScreen" parent="." instance=ExtResource( 6 )]
position = Vector2( 233.831, 243.636 )
scale = Vector2( 0.75, 0.75 )

[node name="LifeScreen2" parent="." instance=ExtResource( 6 )]
position = Vector2( 185.693, 6.04899 )
scale = Vector2( 0.75, 0.75 )

[node name="Trainer" parent="." instance=ExtResource( 8 )]
position = Vector2( 250.835, 282.69 )

[node name="Game_Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
bus = "Music"

[node name="AudioFadeInTween" type="Tween" parent="."]

[node name="default" type="StaticBody2D" parent="."]
position = Vector2( 136.825, 234.406 )
collision_layer = 2
collision_mask = 2
script = ExtResource( 11 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="default"]
shape = SubResource( 2 )

[node name="Default_Music" type="AudioStreamPlayer" parent="default"]
stream = ExtResource( 10 )
bus = "Music"

[node name="EnergyScreen" parent="." instance=ExtResource( 12 )]
position = Vector2( 123.389, 6.77013 )
scale = Vector2( 0.75, 0.75 )

[node name="EnergyScreen2" parent="." instance=ExtResource( 12 )]
position = Vector2( 259.782, 243.656 )
scale = Vector2( 0.75, 0.75 )
z_index = 1

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color( 0.0156863, 0.0156863, 0.0156863, 1 )

[node name="Lighting" parent="." instance=ExtResource( 14 )]

[node name="Light" parent="Lighting" instance=ExtResource( 15 )]
position = Vector2( 10.3181, 71.0362 )

[node name="Light2" parent="Lighting" instance=ExtResource( 15 )]
position = Vector2( 313.909, 72.6236 )

[node name="Light3" parent="Lighting" instance=ExtResource( 15 )]
position = Vector2( 161.915, 171.042 )

[node name="Light4" parent="Lighting" instance=ExtResource( 15 )]
position = Vector2( 203.981, 170.646 )

[node name="Light5" parent="Lighting" instance=ExtResource( 15 )]
position = Vector2( 117.865, 314.702 )

[node name="Light6" parent="Lighting" instance=ExtResource( 15 )]
position = Vector2( 117.865, 247.635 )

[node name="Light7" parent="Lighting" instance=ExtResource( 15 )]
position = Vector2( 294.066, 313.909 )

[node name="Light8" parent="Lighting" instance=ExtResource( 15 )]
position = Vector2( 298.035, 247.635 )

[node name="Light9" parent="Lighting" instance=ExtResource( 15 )]
position = Vector2( 32.1624, 27.7243 )

[node name="Light10" parent="Lighting" instance=ExtResource( 15 )]
position = Vector2( 289.549, 29.1385 )

[connection signal="ai_score" from="PongGame" to="." method="_on_PongGame_ai_score"]
[connection signal="player_score" from="PongGame" to="." method="_on_PongGame_player_score"]
[connection signal="on_lever_pressed" from="LeftLever" to="." method="_on_LeftLever_on_lever_pressed"]
[connection signal="on_lever_pressed" from="RightLever" to="." method="_on_RightLever_on_lever_pressed"]
